WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51975
Directly composited SVG images fail to render
https://bugs.webkit.org/show_bug.cgi?id=51975
Summary
Directly composited SVG images fail to render
Simon Fraser (smfr)
Reported
2011-01-05 18:01:11 PST
<img src="foo.svg" -webkit-transform: translateZ(0)"> fails to render.
Attachments
Patch
(8.47 KB, patch)
2011-01-05 18:28 PST
,
Simon Fraser (smfr)
ariya.hidayat
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-01-05 18:15:29 PST
r67900
was supposed to fix this, but CachedImage::image() can return a nullImage() which is a bitmap image.
Simon Fraser (smfr)
Comment 2
2011-01-05 18:28:23 PST
Created
attachment 78086
[details]
Patch
Simon Fraser (smfr)
Comment 3
2011-01-05 21:30:13 PST
<
rdar://problem/8248494
>
Ariya Hidayat
Comment 4
2011-01-05 21:33:11 PST
Comment on
attachment 78086
[details]
Patch re=me
Simon Fraser (smfr)
Comment 5
2011-01-05 21:45:12 PST
http://trac.webkit.org/changeset/75137
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug