WebCore/loader/cache/CachedImage.h
@@ -44,7 +44,8 @@ public:
     
     virtual void load(CachedResourceLoader* cachedResourceLoader);
 
-    Image* image() const;
+    Image* image() const; // Returns the nullImage() if the image is not available yet.
+    bool hasImage() const { return m_image.get(); }
 
     bool canRender(float multiplier) const { return !errorOccurred() && !imageSize(multiplier).isEmpty(); }
 
